# crypt

./: Cargo.toml  README.md
.github/workflows/: build-and-release.yml  tests.yml
src/: aes.rs  argon2.rs  cli.rs  crypt.rs  file.rs  header.rs  main.rs  password.rs
