[package]
name = "crypt"
version = "0.1.0"
description = "A file encryption and decryption tool using AES and Argon2id."
license = "GPL-3.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
block-padding = "0.3.3"
hex = "0.4.3"
argon2 = "0.5.3"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
prettytable = "0.10.0"
rpassword = "7.3.1"
clap = { version = "4.5.34", features = ["derive"] }
sha3 = "0.10.8"
semver = "1.0.26"